--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Dark RPG Coded Message</title>
+<title>Dungeons & Dragons Ominous Dungeon</title>
 <style>
+    @import url('https://fonts.googleapis.com/css2?family=IM+Fell+English+SC&display=swap');
+
     body {
-        font-family: 'Courier New', monospace;
+        font-family: 'IM Fell English SC', serif;
         background-color: #222;
+        background-image: url('https://i.imgur.com/GNFYTD9.jpg'); /* Replace with your desired background image */
+        background-size: cover;
+        background-position: center;
         color: #e0e0e0;
         display: flex;
         justify-content: center;
@@ -17,32 +22,18 @@
     }
 
     h1 {
-        font-size: 2.5rem;
+        font-size: 3rem;
         margin: 0;
         text-align: center;
-    }
-
-    .container {
-        text-align: center;
-        border: 3px solid #444;
-        border-radius: 10px;
-        padding: 2rem;
-        background-color: #333;
-        box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
-    }
-
-    .coded-message {
-        font-size: 1.5rem;
-        margin-top: 1rem;
-        text-align: center;
-        word-wrap: break-word;
-        text-shadow: 1px 1px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000;
+        text-shadow: 2px 2px 5px #000;
     }
 </style>
 </head>
 <body>
-<div class="container">
-    <h1>Dark RPG Coded Message</h1>
+    <h1>Enter the Ominous Dungeon</h1>
+    <audio src="your-audio-file.mp3" autoplay loop hidden></audio>
+</body>
+</html>
     <div class="coded-message">
         X7G9opzGdicvt2VMJAzMkfqwDn1jK<!---->7pPjd!$6anI8mUzi
     </div>
