--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </head>
 <body>
     <h1>Enter the Ominous Dungeon</h1>
-    <audio src="your-audio-file.mp3" autoplay loop hidden></audio>
+    <audio src="https://github.com/haganrobb/Shadowdarksession/blob/74a2c80a23f8486ef1c898ecf5bd715df45ccbd7/Dungeon%20Sounds.mp3" autoplay loop hidden></audio>
 </body>
 </html>
     <div class="coded-message">
