--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     body {
         font-family: 'IM Fell English SC', serif;
         background-color: #222;
-        background-image: url('https://i.imgur.com/GNFYTD9.jpg'); /* Replace with your desired background image */
+        background-image: url('https://github.com/haganrobb/Shadowdarksession/blob/4a6f3ebb68d19994266c3e1ca4ce858e03b19d8b/Dungeon%20Wall.jpg'); /* Replace with your desired background image */
         background-size: cover;
         background-position: center;
         color: #e0e0e0;
