--- a/index.html
+++ b/index.html
@@ -3,13 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Dungeons & Dragons Ominous Dungeon</title>
+<title>Simple Dungeon Page</title>
 <style>
-
     body {
-        font-family: 'IM Fell English SC', serif;
-        background-color: #222;
-        background-image: url('https://github.com/haganrobb/Shadowdarksession/blob/4a6f3ebb68d19994266c3e1ca4ce858e03b19d8b/Dungeon%20Wall.jpg'); /* Replace with your desired background image */
+        font-family: 'Arial', sans-serif;
+        background-image: url('https://raw.githubusercontent.com/haganrobb/Shadowdarksession/856275f0d565c2d0707f5b4ceb906f32b39fe1aa/Dungeon%20Wall.jpg');
         background-size: cover;
         background-position: center;
         color: #e0e0e0;
@@ -18,24 +16,20 @@
         align-items: center;
         height: 100vh;
         margin: 0;
+        padding: 1rem;
+        text-align: center;
     }
 
-    h1 {
-        font-size: 3rem;
-        margin: 0;
-        text-align: center;
-        text-shadow: 2px 2px 5px #000;
+    p {
+        font-size: 2rem;
+        text-shadow: 1px 1px 5px #000;
     }
 </style>
 </head>
 <body>
-    <h1>Enter the Ominous Dungeon</h1>
-    <audio src="https://github.com/haganrobb/Shadowdarksession/blob/74a2c80a23f8486ef1c898ecf5bd715df45ccbd7/Dungeon%20Sounds.mp3" autoplay loop hidden></audio>
-</body>
-</html>
-    <div class="coded-message">
-        X7G9opzGdicvt2VMJAzMkfqwDn1jK<!---->7pPjd!$6anI8mUzi
-    </div>
-</div>
+    <p>
+        Welcome to the ominous dungeon. Brave adventurer, beware of the lurking dangers and seek the treasures that lie deep within.
+    </p>
+    <audio src="https://raw.githubusercontent.com/haganrobb/Shadowdarksession/856275f0d565c2d0707f5b4ceb906f32b39fe1aa/Dungeon%20Sounds.mp3" autoplay loop hidden></audio>
 </body>
 </html>
