--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
         flex-direction: column;
         height: 100vh;
         margin: 0;
-        padding: 10rem;
+        padding: 50rem;
         text-align: left;
     }
 
     p {
-        font-size: 1.4rem;
+        font-size: 1.2rem;
         text-shadow: 1px 1px 5px #000;
         opacity: 0;
         transition: opacity 5s;
@@ -33,7 +33,7 @@
 
     button {
         font-family: 'Cinzel', serif;
-        font-size: 1.5rem;
+        font-size: 2rem;
         padding: 10px 20px;
         border: 2px solid #e0e0e0;
         background-color: rgba(0, 0, 0, 0.6);
@@ -69,7 +69,7 @@
 </script>
 </head>
 <body>
-    <button id="enterButton" onclick="onButtonClick()">Enter the Dungeon</button>
+    <button id="enterButton" onclick="onButtonClick()">Enter The Dungeon</button>
     <p id="hiddenText">
         "Greetings, brave adventurers,
         <br>
