--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
         text-align: left;
     }
 
+    .content {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        height: 100%;
+        padding: 1rem;
+        text-align: center;
+    }
     p {
         font-size: 1.2rem;
         text-shadow: 1px 1px 5px #000;
