--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
         flex-direction: column;
         height: 100vh;
         margin: 0;
-        padding: 4rem;
+        padding: 2rem;
         text-align: left;
+        text-postion: center;
+        button-postion: center;
     }
 
  
