--- a/index.html
+++ b/index.html
@@ -20,11 +20,27 @@
         flex-direction: column;
         height: 100vh;
         margin: 0;
-        padding: 40rem;
+        padding: 2rem;
         text-align: left;
     
     }
+    
+ @media screen and (min-width: 768px) {
+        body {
+            padding: 4rem;
+        }
+    }
 
+    @media screen and (min-width: 992px) {
+        body {
+            padding: 6rem;
+        }
+    }
+
+    @media screen and (min-width: 1200px) {
+        body {
+            padding: 8rem;
+        }
  
     p {
         font-size: 1.2rem;
