--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
     p {
         font-size: 1rem;
+        padding: 50px, 50px;
         text-shadow: 1px 1px 5px #000;
         opacity: 0;
         transition: opacity 5s;
